# needleman-wunsch

./: .gitignore  needleman-wunsch.pro
distributed-memory/: CMakeLists.txt  instructions.txt  needleman-wunsch.pro  test  test.cpp
distributed-memory/src/: main.cpp
distributed-memory/src/nw/: needleman-wunsch.cpp  needleman-wunsch.hpp
distributed-memory/src/nw/par/: needleman-wunsch-par.cpp
distributed-memory/src/nw/seq/: needleman-wunsch-seq.cpp
distributed-memory/tests/: dnaA.txt  dnaB.txt  test.sh
distributed-memory/tests/results/16_threads/: 10000.txt
distributed-memory/tests/results/2_process/: 10000.txt  20000.txt  30000.txt
distributed-memory/tests/results/2_threads/: 30000.txt  40000.txt
distributed-memory/tests/results/4_process/: 10000.txt  30000.txt
distributed-memory/tests/results/4_threads/: 20000.txt  30000.txt
distributed-memory/tests/results/8_process/: 10000.txt  20000.txt  30000.txt
distributed-memory/tests/results/8_threads/: 20000.txt  40000.txt
distributed-memory/tests/results/sequential/: 20000.txt  30000.txt  40000.txt
seq/: CMakeLists.txt  (+1 more)
shared-memory/: CMakeLists.txt  README.md  needleman-wunsch.pro
shared-memory/src/: main.cpp
shared-memory/src/nw/: needleman-wunsch.hpp
shared-memory/src/nw/par/: needleman-wunsch-par.cpp
shared-memory/tests/: test_parallel.sh  test_sequential.sh
shared-memory/tests/results/16_threads/: 20000.txt  30000.txt  40000.txt  50000.txt
shared-memory/tests/results/2_threads/: 10000.txt  20000.txt
shared-memory/tests/results/4_threads/: 10000.txt  40000.txt
src/: main.cpp
(+9 files in other folders)
